fix: align markup by pixel-perfect

--- a/singolo.css
+++ b/singolo.css
@@ -1,4 +1,9 @@
 @font-face {
+  font-family: "Lato Light";
+  src: url("./public/fonts/Lato-Light.ttf");
+}
+
+@font-face {
   font-family: "Lato Regular";
   src: url("./public/fonts/Lato-Regular.ttf");
 }
@@ -30,10 +35,11 @@ html {
 .container {
   width: 1020px;
   margin: 0 auto;
+  box-sizing: border-box;
 }
 
 .header {
-  height: 90px;
+  height: 97px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -41,6 +47,7 @@ html {
   text-transform: uppercase;
   background-color: #2d303a;
   border-bottom: 6px solid #323746;
+  padding: 0 25px 0 40px;
 }
 
 .link {
@@ -48,13 +55,10 @@ html {
   text-decoration: none;
 }
 
-.logo {
-  margin: 0 40px;
-}
-
 .logo__title {
   font-size: 2.5rem;
   line-height: 6px;
+  letter-spacing: -0.5px;
   color: #ffffff;
 }
 
@@ -62,18 +66,22 @@ html {
   color: #f06c64;
 }
 
+.navigation {
+  padding: 10px 0 0;
+}
+
 .main-menu {
   display: flex;
   justify-content: space-around;
   align-items: center;
   color: #ffffff;
-  margin: 0 40px;
 }
 
 .main-menu__item {
   position: relative;
   font-size: 1.2rem;
   line-height: 0.6rem;
+  letter-spacing: -0.2px;
   padding: 0 15px;
   list-style: none;
 }
@@ -101,7 +109,7 @@ html {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 53px 112px 78px;
+  padding: 50px 112px 88px;
   background: #f06c64;
 }
 
@@ -109,7 +117,7 @@ html {
 .mobile__slider::after {
   content: '';
   position: absolute;
-  top: 50%;
+  top: 47%;
   width: 15px;
   height: 26px;
 }
@@ -145,28 +153,33 @@ html {
 }
 
 .mobile__item--vertical {
-  transform: translate(-122px, 0) rotate(90deg);
+  transform: translate(-148px, 0) rotate(90deg);
   -webkit-box-shadow: 25px -25px 0 0 #ce5d56;
   -moz-box-shadow: 25px -25px 0 0 #ce5d56;
   box-shadow: 25px -25px 0 0 #ce5d56;
 }
 
+.mobile__screen {
+  border: 3px solid #c6c6c6;
+  border-radius: 3px;
+}
+
 .mobile__screen--horizontal {
   width: 188px;
-  height: 333px;
+  height: 334px;
   background-repeat: no-repeat;
-  background-position: -12px -134px;
+  background-position: -13px -133px;
   background-image: url("./public/img/layer-horizontal.svg");
-  transform: translate(13px, 61px);
+  transform: translate(11px, 61px);
 }
 
 .mobile__screen--vertical {
-  width: 333px;
+  width: 334px;
   height: 188px;
   background-repeat: no-repeat;
-  background-position: -125px -119px;
+  background-position: -125px -118px;
   background-image: url("./public/img/layer-vertical.svg");
-  transform: translate(-60px, 133px) rotate(-90deg);
+  transform: translate(-63px, 133px) rotate(-90deg);
 }
 
 /*----------------------------------------services-----------------*/
@@ -180,6 +193,7 @@ html {
 .services__title {
   font-size: 3rem;
   line-height: 1.8rem;
+  letter-spacing: -.2px;
   color: #666d89;
   font-family: "Lato Black", sans-serif;
 }
@@ -188,14 +202,15 @@ html {
   font-size: 1.8rem;
   line-height: 3rem;
   color: #767e9e;
-  font-family: "Lato Regular", sans-serif;
-  padding: 33px 0 50px;
+  font-family: "Lato Light", sans-serif;
+  padding: 27px 0 44px;
+  text-align: justify;
 }
 
 .details {
   display: grid;
-  grid-template-columns: repeat(3, 33%);
-  grid-gap: 35px 20px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 30px 20px;
 }
 
 .details__item {
@@ -203,6 +218,7 @@ html {
 }
 
 .details-img__wrapper {
+  box-sizing: border-box;
   min-width: 59px;
   height: 59px;
   display: flex;
@@ -210,40 +226,26 @@ html {
   align-items: center;
   border-radius: 50%;
   border: 2px solid #666d89;
+  margin-top: 3px;
 }
 
 .details__wrapper {
-  padding-left: 20px;
+  padding-left: 21px;
 }
 
 .details__title {
   font-size: 1.8rem;
   line-height: 1.8rem;
+  letter-spacing: -.1px;
   color: #666d89;
   font-family: "Lato Black", sans-serif;
-  padding-bottom: 15px;
+  padding-bottom: 10px;
 }
 
 .details__desc {
   font-size: 1.2rem;
   line-height: 2.2rem;
   color: #767e9e;
+  text-align: justify;
   font-family: "Lato Regular", sans-serif;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
